All_Component_DX/force-app/main/default/objects/SM_ServiceMax_Trigger_Control__c/fields/SM_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>SM_Object_Name__c</fullName>
    <description>This field holds the name of the object for which trigger is enabled/disabled</description>
    <label>Object Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>