All_Component_DX/force-app/main/default/objects/SM_ServiceMax_Trigger_Control__c/fields/SM_Type__c.field-meta.xml
<CustomField>
    <fullName>SM_Type__c</fullName>
    <description>This holds information of at what level trigger is bypassed for given object. Global/User/Profile Level.</description>
    <label>Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>