All_Component_DX/force-app/main/default/objects/SM_ServiceMax_Trigger_Control__c/fields/SM_Value__c.field-meta.xml
<CustomField>
    <fullName>SM_Value__c</fullName>
    <description>This field holds the ids of users/profiles for which trigger is bypassed</description>
    <label>Value</label>
    <type>TextArea</type>
</CustomField>